--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ kramdown:
 exclude:
   - README.md
   - ".github"
-  - "assets/cv/YiranLi_CV.pdf"  # remove if you add a real CV
+  - "assets/cv/Yiran_Li_CV.pdf"  # remove if you add a real CV
 
 # Collections (optional)
 collections:
