--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ header_pages:
   #- blog/index.md
 
 author:
-  name: Yiran Li
-  email: y1e4w7@u.northwestern.edu2p-=[]
-  github_username: yiran-li-112358
+  Yiran Li
+  y1e4w7@u.northwestern.edu2p-=[]
+  yiran-li-112358
   #linkedin: your-linkedin
   #scholar: https://scholar.google.com/citations?user=YOURID
   #orcid: https://orcid.org/YOUR-ORCID
